Fix overlap of cards, translations fixes, meeple visibility, giveExtraTime, auto take last card

--- a/dontgointhere.css
+++ b/dontgointhere.css
@@ -614,7 +614,8 @@ div.dgit-ghost-tracker-animate:hover {
     transform: rotateY(180deg);
     background-image: url('img/dgit_meeples.png');
     z-index: 50;
-    filter: drop-shadow(0.5rem 0 1rem rgb(255, 255, 255));
+    filter: drop-shadow(1px 1px 1px black);
+    -webkit-filter: drop-shadow(1px 1px 1px black);
 }
 
 .dgit-meeple-space-1 {
